# KTGPT

./: .gitignore  CLAUDE.md  README.md  TODO.md  modal_train.py  pyproject.toml
configs/: model_d_moe_aux_loss.yaml
data/: build_lora_dataset.py  filter.py  generate_phase1.py  generate_sft_pipeline.py  mix.py  prepare_lora_data.py  prepare_lora_data_100k.py  synth.py
eval/: routing_analysis.py  run_eval.py
ktgpt_chat/backend/: local_service.py  service.py
ktgpt_chat/frontend/: index.html  package-lock.json
ktgpt_chat/frontend/src/app/: globals.css
ktgpt_chat/frontend/src/app/api/chat/: route.ts
ktgpt_chat/frontend/src/components/: ChatInterface.tsx
model/: __init__.py  attention.py  config.py  lora.py  model.py  moe.py  transformer.py  utils.py
scratch/: debug_pipeline.py  list_ckpts.py  test_columns.py  test_sft_dataset.py
scripts/: count_params.py  eval_lora.py  generate_figures.py  inference.py  prepare_grpo_data.py  prepare_sft_data.py  pretokenize.py  smoke_test.py  sweep_config.py
train/: grpo.py  pretrain.py  sft.py  sft_lora.py
