[project]
name = "kt-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.16.0",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "lm-eval>=0.4.0",
    "matplotlib>=3.8.0",
    "modal>=0.56.0",
    "numpy>=1.24.0",
    "pydantic>=2.13.3",
    "pyyaml>=6.0",
    "seaborn>=0.13.0",
    "sentencepiece>=0.1.99",
    "torch>=2.1.0",
    "tqdm>=4.66.0",
    "transformers>=4.36.0",
    "uvicorn>=0.46.0",
    "wandb>=0.16.0",
]
